Driver mobile fix

--- a/projects/auto-requests/src/app/components/driver-typeahead/driver-typeahead.component.html
+++ b/projects/auto-requests/src/app/components/driver-typeahead/driver-typeahead.component.html
@@ -7,7 +7,7 @@
              formControlName="driver"
              [readonly]="selectedDriver ? true : false"
              placeholder="Водитель не назначен">
-      <mat-hint>{{selectedDriver && selectedDriver.phone ? selectedDriver.phone : ''}}</mat-hint>
+      <mat-hint>{{selectedDriver && selectedDriver.mobile ? selectedDriver.mobile : ''}}</mat-hint>
       <mat-error>{{error}}</mat-error>
       <button mat-icon-button
               matSuffix
